# todoism

./: .envrc  design.md  flake.nix  gemini.md
cli/: Cargo.toml
cli/src/: history.rs  main.rs  stats.rs
cli/src/tui/: app.rs  mod.rs  ui.rs
core/: Cargo.toml
core/src/: input.rs  lib.rs  time.rs
core/src/model/: daily_log.rs  mod.rs  stats.rs  strategy.rs  task.rs
core/src/repository/: daily_log.rs  file.rs  mod.rs  mod_stats.rs  traits.rs
core/src/service/: archive_service.rs  daily_log_service.rs  dto.rs  mod.rs  task_service.rs
core/src/usecase/: daily_plan.rs  history.rs  history_test.rs  mod.rs
