[package]
name = "todoism-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
tabled = "0.20.0"
todoism-core = { path = "../core" }
unicode-width = "0.2.2"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
